# a-team-website

./: .gitignore  .gitmodules  .travis.yml  .tsconfig.json  Caddyfile  Cargo.toml  Dockerfile  README.md  aliases.js  api_spec.apib  debug_run.sh  diesel.toml  docker-compose.yml  dredd.yml  elm.json  format_questions.awk  format_users.awk  hello  index.html  insert_users.sh  main.js  output.html  package-lock.json  package.json  permissions.apib  search-index.js  settings.html  source-files.js  template.html  test_questions.csv  tests.apib  tests.sh  users.apib
backend/: Cargo.toml  Dockerfile  README.md  tests.sh
backend/migrations/2019-01-13-203149_create_users/: up.sql
backend/migrations/2019-03-08-171503_create_access/: down.sql  up.sql
backend/migrations/2019-04-15-150025_chemicals/: down.sql  up.sql
backend/rest_api/: get_search.http
backend/src/: errors.rs  lib.rs  main.rs  models.rs  search.rs  users.rs
backend/src/access/: models.rs  requests.rs  schema.rs
backend/src/chemicals/: models.rs  requests.rs  schema.rs
backend/src/users/: mod.rs  models.rs  requests.rs  schema.rs
backend/webdev_lib/: .gitignore  Cargo.toml  backupDb.sh  database_add_checklist  signin.html  tests.sh
backend/webdev_lib/migrations/2019-03-08-171503_create_access/: up.sql
backend/webdev_lib/migrations/2019-05-14-215202_tests/: down.sql
backend/webdev_lib/migrations/2019-08-20-022223_registration_cap/: down.sql  up.sql
backend/webdev_lib/rest_api/: get_all.http  update.http
backend/webdev_lib/src/: errors.rs  lib.rs
backend/webdev_lib/src/chemicals/: models.rs  (+1 more)
(+2999 files in other folders)
