[package]
name = "web_dev"
version = "0.1.0"
authors = ["Tim <timothyhollabaugh@gmail.com>"]
edition = "2018"

[dependencies]
rouille = "3.0.0"
diesel = { version = "1.3.3", features = ["mysql"] }
dotenv = "0.13.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
simplelog = "0.5"
url="1.7.2"
csv = "1.0.5"

[[bin]]
name = "csv_user_import"
path = "src/bin/csv_user_import.rs"
