[package]
name = "webdev_server"
version = "0.1.0"
authors = ["Tim <timothyhollabaugh@gmail.com>"]
edition = "2018"

[dependencies]
webdev_lib = { path = "webdev_lib"}
rouille = "3.0.0"
diesel = { version = "1.3.3", features = ["mysql", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.4"
dotenv = "0.13.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
simplelog = "0.5"
url="1.7.2"
csv = "1.0.5"

