[package]
name = "webdev_lib"
version = "0.1.0"
authors = ["Tim <timothyhollabaugh@gmail.com>"]
edition = "2018"

[dependencies]
rouille = "3.0.0"
diesel = { version = "1.3.3", features = ["mysql", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
google-signin = "0.3.0"
dotenv = "0.13.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4"
simplelog = "0.5"
url="1.7.2"
chrono = { version = "0.4.6", features = ["serde"] }
csv = "1.0.5"
rand = "0.6.5"
r2d2 = "0.8.4"

[[bin]]
name = "csv_user_import"
path = "src/bin/csv_user_import.rs"
